# exactly-once

./: CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SPEC.md  pyproject.toml
.github/: good-first-issues.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DELIVERY-PLAN.md  PRD.md  RESEARCH.md  TEST-PLAN.md
examples/: README.md  crash_mid_payment.py  email.py  payment.py
scripts/: check_docs_honesty.py
src/exactly_once/: __init__.py  _types.py  codec.py  core.py  errors.py  keys.py  policies.py
src/exactly_once/stores/: __init__.py  base.py  memory.py  postgres.py  redis.py  sqlite.py
tests/: _mp_helpers.py  _spy.py  conftest.py  test_async.py  test_backends.py  test_crash.py  test_e2e.py  test_edges.py  test_more_coverage.py  test_property.py  test_race.py  test_regressions.py  test_stores.py  test_unit.py
